--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 altair==5.4.1
-asttokens==2.4.0  # 去掉本地路径，添加正确的版本号
+asttokens==2.4.0
 attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
-brotli==1.0.9  # 去掉本地路径，使用标准版本
+brotli==1.0.9 
 cachetools==5.5.0
 certifi==2024.9.26
 charset-normalizer==3.2.0
